syntax = "proto3";
package BuildXL.Plugin.Grpc;

message Noop
{
}

message SupportedOperationResponse
{
    enum SupportedOperation{
        LogParse = 0;
        ProcessResult = 1;
    }
    repeated SupportedOperation operation = 1;
    optional int32 timeout = 2;
    repeated string supportedProcesses = 3;
}

enum LogType
{
    Error = 0;
    StandardOutput = 1;
    None = 2;
}

message LogParseMessage
{
    LogType logType = 1;
    string message = 2;
}

message LogParseMessageResponse
{
    LogType logType = 1;
    LogParseResult logParseResult = 2;
}

message LogParseResult
{
    string parsedMessage = 1;
}

message ProcessResultMessage
{
    string executable = 1;
    string arguments = 2;
    optional ProcessStream standardIn = 3;
    ProcessStream standardOut = 4;
    ProcessStream standardErr = 5;
    int32 exitCode = 6;
    string pipSemiStableHash = 7;
}

message ProcessStream
{
    oneof data {
        string content = 1;
        string filePath = 2;
    }
}

message ProcessResultMessageResponse
{
    string standardOutToAppend = 1;
    string standardErrToAppend = 2;
    optional int32 exitCode = 3;
}